# project_template

./: CMakeLists.txt  README.md  README.txt
app/: CMakeLists.txt  main.cpp
project_template/: CMakeLists.txt
project_template/app_module1/: CMakeLists.txt  module1.cpp  module1.h
project_template/app_module2/: CMakeLists.txt  module2.cpp  module2.h
project_template/tools/: tools.cpp  tools.h
